--- a/DotnetMVCBaslangic/DotnetMVCBaslangic/Views/Ogrenci/Edit.cshtml
+++ b/DotnetMVCBaslangic/DotnetMVCBaslangic/Views/Ogrenci/Edit.cshtml
@@ -29,4 +29,8 @@
         </div>
     </div>
 </form>
-
+@section Scripts{
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
