--- a/OOPTut/src/OOPTut.Web.UI/Views/Home/Index.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Home/Index.cshtml
@@ -2,6 +2,6 @@
 @{
     ViewData["Title"] = "Index";
 }
-
+<button class="btn btn-primary">Ben bir bootstrap butonuyum</button>
 <h1>Merhaba Mars!</h1>
 
