--- a/OOPTut/src/OOPTut.Web.UI/Views/Shared/_Layout.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Shared/_Layout.cshtml
@@ -50,8 +50,8 @@
 
     <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-light">
         <div class="col-md-5 p-lg-5 mx-auto my-5">
-            <h1 class="display-4 font-weight-normal">Punny headline</h1>
-            <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
+            <h1 class="display-4 font-weight-normal">Pazar Alışverişini kolaylaştırdık!</h1>
+            <p class="lead font-weight-normal">Artık pırasayı almayı unuttum yok patates pahalıydı dertlerine son! Uygulamamız pek yakında App Store ve Play Store'da yayında(!)</p>
             <a class="btn btn-outline-secondary" href="#">Coming soon</a>
         </div>
         <div class="product-device shadow-sm d-none d-md-block"></div>
