--- a/OOPTut/src/OOPTut.Web.UI/Views/Shared/_Layout.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Shared/_Layout.cshtml
@@ -36,7 +36,8 @@
     <nav class="site-header sticky-top py-1">
         <div class="container d-flex flex-column flex-md-row justify-content-between">
             <a class="py-2" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24" focusable="false"><title>Product</title><circle cx="12" cy="12" r="10" /><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94" /></svg>
+
+                <img class="site-logo" src="~/img/harvest.png" />
             </a>
             <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>
             <a class="py-2 d-none d-md-inline-block" href="#">Product</a>
@@ -48,14 +49,13 @@
         </div>
     </nav>
 
-    <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-light">
-        <div class="col-md-5 p-lg-5 mx-auto my-5">
-            <h1 class="display-4 font-weight-normal">Pazar Alışverişini kolaylaştırdık!</h1>
+    <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-dark text-light slider-bg">
+        <div class="col-md-6 p-lg-6 mx-auto my-5">
+            <h1 class="display-4 font-weight-normal">Pazar Alışverişim artık çooooook kolay!</h1>
             <p class="lead font-weight-normal">Artık pırasayı almayı unuttum yok patates pahalıydı dertlerine son! Uygulamamız pek yakında App Store ve Play Store'da yayında(!)</p>
-            <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+            <a class="btn btn-outline-secondary btn-light" href="#">Giriş Yap</a>
         </div>
-        <div class="product-device shadow-sm d-none d-md-block"></div>
-        <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+        
     </div>
     <div class="container-fluid">
         @RenderBody()
