update index design

--- a/OOPTut/src/OOPTut.Web.UI/Views/Home/Index.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Home/Index.cshtml
@@ -2,6 +2,32 @@
 @{
     ViewData["Title"] = "Index";
 }
-<button class="btn btn-primary">Ben bir bootstrap butonuyum</button>
-<h1>Merhaba Mars!</h1>
+<div class="text-center mt-5 col-6 offset-3">
+    <h2>Uygulamanın Özellikleri</h2>
+    <ul class="list-group list-group-flush list-inline mt-3">
+        <li class="list-group-item">Kullanıcı Giriş ve Kayıt yapılabilir</li>
+        <li class="list-group-item">Kullanici bilgileri girilir.</li>
+        <li class="list-group-item">Şifremi unuttum gibi aksiyonlar yapılacak.</li>
+        <li class="list-group-item">Ürün Ekleme/Silme/Düzenleme/Listeleme</li>
+        <li class="list-group-item">Ürünlere resim ekleme</li>
+        <li class="list-group-item">Alisveris listesi olusturma/silme/duzenleme/listeleme</li>
+        <li class="list-group-item">Varolan urunleri bu listeye ekleme</li>
+        <li class="list-group-item">Alisveris listesini arkadasinla paylasma</li>
+    </ul>
+    <h3 class="mt-5">
+        Ödev
+    </h3>
+    <ul class="list-group list-group-flush list-inline mt-3">
+        <li class="list-group-item">HomeController icinde Hakkimizda(About) sayfasi action'i ve ona bagli View olusturulacak</li>
+        <li class="list-group-item">
+            Yine ayni sekilde iletisim(Contact) sayfasi yapilacak
+        </li>
+        <li class="list-group-item">
+            AccountController olusturulup icine Giris(Login) ve Kayit(Register) Actionlari yapilarak sadece View sayfa tasarimlari yapilacak
+        </li>
+        <li class="list-group-item">
+            Bootstrap4 orneklerinden faydalanabilirsiniz. TagHelperlara takilmayin onlari burada yapicagiz.
+        </li>
+    </ul>
+</div>
 
