about action and view created

--- a/OOPTut/src/OOPTut.Web.UI/Views/Shared/_Layout.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
             <a class="py-2 d-none d-md-inline-block" href="#">Features</a>
             <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>
             <a class="py-2 d-none d-md-inline-block" href="#">Support</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>
+            <a class="py-2 d-none d-md-inline-block" asp-action="About" asp-controller="Home">Hakkımızda</a>
             <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>
         </div>
     </nav>
