register tamam ders bitti

--- a/OOPTut/src/OOPTut.Web.UI/Views/Home/Index.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Home/Index.cshtml
@@ -18,16 +18,14 @@
         Ödev
     </h3>
     <ul class="list-group list-group-flush list-inline mt-3">
-        <li class="list-group-item">HomeController icinde Hakkimizda(About) sayfasi action'i ve ona bagli View olusturulacak</li>
+        <li class="list-group-item">HomeController icinde Hakkimizda(About), iletisim(Contact) sayfasi action'i ve ona bagli Viewler guzellestirilecek</li>
         <li class="list-group-item">
-            Yine ayni sekilde iletisim(Contact) sayfasi yapilacak
+            Login islemi yapilacak
         </li>
         <li class="list-group-item">
-            AccountController olusturulup icine Giris(Login) ve Kayit(Register) Actionlari yapilarak sadece View sayfa tasarimlari yapilacak
+            Kayit olan kullanicilar listelenecek
         </li>
-        <li class="list-group-item">
-            Bootstrap4 orneklerinden faydalanabilirsiniz. TagHelperlara takilmayin onlari burada yapicagiz.
-        </li>
+
     </ul>
 </div>
 
