--- a/OOPTut/src/OOPTut.Web.UI/Views/Shared/_Layout.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Shared/_Layout.cshtml
@@ -46,7 +46,9 @@
             <a class="py-2 d-none d-md-inline-block" href="#">Support</a>
             <a class="py-2 d-none d-md-inline-block" asp-action="About" asp-controller="Home">Hakkımızda</a>
             <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>
+            @await  Html.PartialAsync("_LoginPartial")
         </div>
+
     </nav>
 
     <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-dark text-light slider-bg">
