--- a/OOPTut/src/OOPTut.Web.UI/Views/BazaarList/Index.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/BazaarList/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿@model IEnumerable<OOPTut.Core.Bazaar.BazaarList>
+@using Microsoft.AspNetCore.Identity
+@using OOPTut.Core.Users
 
+@inject UserManager<ApplicationUser> UserManager
 @{
     ViewData["Title"] = "Pazar Listeleri";
 }
@@ -28,26 +31,31 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatorUserId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedDate)
-            </td>
-            <td>
-                @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @*@Html.DisplayFor(modelItem => item.CreatorUserId)*@
+                    @UserManager.FindByIdAsync(item.CreatorUserId).Result.UserName
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreatedDate)
+                </td>
+                <td>
+                    @*
+
+        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    *@
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
