BazaarListItem Controller/Service/Dto created

--- a/OOPTut/src/OOPTut.Web.UI/Views/BazaarList/Delete.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/BazaarList/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Sil</h1>
 
 <div>
     <h4>BazaarList</h4>
@@ -44,5 +44,5 @@
     </form>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Listeye dön</a>
 </div>
