--- a/OOPTut/src/OOPTut.Web.UI/Views/BazaarListItem/Index.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/BazaarListItem/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create" asp-route-id="@ViewBag.BazaarListItemId">Create New</a>
+    <a asp-action="Create" asp-route-id="@ViewBag.BazaarListItemId">Yeni ekle</a>
 </p>
 <table class="table">
     <thead>
