Update view nearly completed

--- a/OOPTut/src/OOPTut.Web.UI/Views/BazaarListItem/Index.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/BazaarListItem/Index.cshtml
@@ -55,9 +55,9 @@
                 @Html.DisplayFor(modelItem => item.CreatedDate)
             </td>*@
             <td>
-                @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
+                <a asp-action="Update" asp-route-id="@item.Id">Düzenle</a> @*|
+        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
             </td>
         </tr>
 }
