Update and Delete process completed

--- a/OOPTut/src/OOPTut.Web.UI/Views/BazaarListItem/Update.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/BazaarListItem/Update.cshtml
@@ -41,6 +41,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-id="@Model.BazaarListId">Back to List</a>
 </div>
 
