--- a/OOPTut/src/OOPTut.Web.UI/Views/Home/Index.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Home/Index.cshtml
@@ -20,10 +20,15 @@
     <ul class="list-group list-group-flush list-inline mt-3">
         <li class="list-group-item">HomeController icinde Hakkimizda(About), iletisim(Contact) sayfasi action'i ve ona bagli Viewler guzellestirilecek</li>
         <li class="list-group-item">
-            Login islemi yapilacak
+            BazaarListItem Index view inde isCompleted ve isCanceled durumlarına göre tablo arkaplan görünümünü değiştirelim(bootstrap kullanarak)
         </li>
         <li class="list-group-item">
-            Kayit olan kullanicilar listelenecek
+            BazaarList/Index de tamamlanan ürün sayısı, iptal edilen ve toplam ürün sayısını belirtin.
+            ** Ve BazaarList in tamamen tamamlanıp tamamlanmadığını da gösterin **
+        </li>
+
+        <li class="list-group-item">
+            Kayit olan kullanicilar listelendi orayı duzeltip menüde link ekledik
         </li>
 
     </ul>
