--- a/OOPTut/src/OOPTut.Web.UI/Views/Manage/CreateRole.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Manage/CreateRole.cshtml
@@ -1,6 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
-@model IEnumerable<IdentityRole>
-
+﻿
+@using Microsoft.AspNetCore.Identity
 @{
     ViewData["Title"] = "CreateRole";
 }
@@ -10,40 +9,8 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Rol Id
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NormalizedName)
-            </th>
-          
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NormalizedName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="container">
+    @{
+        await Html.RenderPartialAsync("RolesListPartial", ViewBag.RoleList as List<IdentityRole>);
+    }
+</div>
