front-end fix slide partial created

--- a/OOPTut/src/OOPTut.Web.UI/Views/Home/Index.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Home/Index.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewData["Title"] = "Index";
 }
+
+<partial name="~/Views/Shared/_SlidePartial.cshtml" />
+
 <div class="text-center mt-5 col-6 offset-3">
     <h2>Uygulamanın Özellikleri</h2>
     <ul class="list-group list-group-flush list-inline mt-3">
