--- a/OOPTut/src/OOPTut.Web.UI/Views/Manage/CreateRole.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Manage/CreateRole.cshtml
@@ -26,7 +26,9 @@
 </div>
 
 <div class="container">
-    @{
-        await Html.RenderPartialAsync("RolesListPartial", ViewBag.RoleList as List<IdentityRole>);
-    }
+    @await Component.InvokeAsync("RoleList")
+    
+
+    @*//await Html.RenderPartialAsync("RolesListPartial", ViewBag.RoleList as List<IdentityRole>
+        );*@
 </div>
