--- a/OOPTut/src/OOPTut.Web.UI/Views/Manage/Index.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Manage/Index.cshtml
@@ -58,4 +58,7 @@
             </tbody>
         </table>
     </div>
+    <div class="row">
+        @await Component.InvokeAsync("RoleList")
+    </div>
 </div>
