--- a/OOPTut/src/OOPTut.Web.UI/Views/Navbar/Update.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Navbar/Update.cshtml
@@ -1,18 +1,19 @@
 ﻿@using OOPTut.Application.NavbarService.Dto
-@model CreateNavBarMenuItemInput
+@model UpdateNavBarMenuItemInput
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Update";
 }
 
-<h1>Create</h1>
+<h1>Update</h1>
 
 <h4>NavBarMenuItem</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Update">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
@@ -44,7 +45,7 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
