Update action completed

--- a/OOPTut/src/OOPTut.Web.UI/Views/Navbar/Index.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Navbar/Index.cshtml
@@ -46,7 +46,8 @@
                 @Html.DisplayFor(modelItem => item.OpenInSamePage)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Icon)
+                @Html.DisplayFor(modelItem => item.Icon) 
+                @Html.Raw(" => ") <span class="fa @item.Icon"></span>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Roles)
@@ -55,7 +56,7 @@
                 @Html.DisplayFor(modelItem => item.IsAnonym)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Update" asp-route-id="@item.Id"><span class="fa fa-edit"></span></a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
