--- a/OOPTut/src/OOPTut.Web.UI/Views/Shared/_Layout.cshtml
+++ b/OOPTut/src/OOPTut.Web.UI/Views/Shared/_Layout.cshtml
@@ -12,6 +12,11 @@
     @*<link href="/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">*@
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
+    @*<link href="~/lib/@@fortawesome/fontawesome-free-webfonts/css/fontawesome.css" />
+        <link href="~/lib/@@fortawesome/fontawesome-free-webfonts/css/fa-regular.css" />*@
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
+
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
